# xdggs-dggal

./: CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: test.yml
example_notebook/: demo_xdggs-dggal.ipynb
tests/: test_smoke.py
xdggs_dggal/: __init__.py  index.py  utils.py
xdggs_dggal/dependences/: grids.py
xdggs_dggal/dependencies/: grids.py
xdggs_dggal/regridding/: __init__.py  regridding.py
xdggs_dggal/regridding/methods/centroid_based/: nearestcentroid.py  nearestpoint.py
