[project]
name = "xdggs-dggal"
version = "0.1.0"
description = "A plugin for Xarray-xdggs that implements dggal as DGGS provider"
authors = [
 	{name = "Wai Tik, Chan", email="wai.tik.chan@ut.ee"},
 	{name = "Alexander Kmoch", email="alexander.kmoch@ut.ee"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xdggs (>=0.5.0,<0.6.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "xarray[io] (>=2025.12.0,<2026.0.0)",
    "geopandas (>=1.1.2,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
